<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="15dp"
    card_view:contentPadding="10dp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/describing_image"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/image"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/pinones" />
        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            card_view:layout_constraintBottom_toTopOf="@+id/hours"
            card_view:layout_constraintStart_toEndOf="@+id/image"
            card_view:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/pinones_address" />
        <TextView
            android:id="@+id/hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/image"
            tools:text="@string/pinones_hours" />
        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/hours"
            tools:text="@string/sight_sanfelipe_phone" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>